removed lock timeout

--- a/app/styles/animation.styl
+++ b/app/styles/animation.styl
@@ -38,43 +38,35 @@
 */
 @keyframes slideInLeft {
   from {
-    opacity: 0;
     -webkit-transform translateX(-100%)
   }
   to {
-    opacity: 1;
     -webkit-transform translateX(0)
   }
 }
 @-webkit-keyframes slideInLeft {
   from {
-    opacity: 0;
     -webkit-transform translateX(-100%)
   }
   to {
-    opacity: 1;
     -webkit-transform translateX(0)
   }
 }
 
 @-moz-keyframes slideInLeft {
   from {
-    opacity: 0;
     -webkit-transform translateX(-100%)
   }
   to {
-    opacity: 1;
     -webkit-transform translateX(0)
   }
 }
 
 @-o-keyframes slideInLeft {
   from {
-    opacity: 0;
     -webkit-transform translateX(-100%)
   }
   to {
-    opacity: 1;
     -webkit-transform translateX(0)
   }
 }
@@ -85,43 +77,43 @@
 */
 @keyframes slideOutRight {
   from {
-    opacity: 1;
+    opacity 1
     -webkit-transform translateX(0)
   }
   to {
-    opacity: 0;
-    -webkit-transform translateX(100%)
+    opacity 0
+    -webkit-transform translateX(50%)
   }
 }
 @-webkit-keyframes slideOutRight {
   from {
-    opacity: 1;
+    opacity 1
     -webkit-transform translateX(0)
   }
   to {
-    opacity: 0;
-    -webkit-transform translateX(100%)
+    opacity 0
+    -webkit-transform translateX(50%)
   }
 }
 
 @-moz-keyframes slideOutRight {
   from {
-    opacity: 1;
+    opacity 1
     -webkit-transform translateX(0)
   }
   to {
-    opacity: 0;
-    -webkit-transform translateX(100%)
+    opacity 0
+    -webkit-transform translateX(50%)
   }
 }
 
 @-o-keyframes slideOutRight {
   from {
-    opacity: 1;
+    opacity 1
     -webkit-transform translateX(0)
   }
   to {
-    opacity: 0;
-    -webkit-transform translateX(100%)
+    opacity 0
+    -webkit-transform translateX(50%)
   }
 }
