--- a/app/styles/layout.styl
+++ b/app/styles/layout.styl
@@ -15,7 +15,7 @@
 .standalone
   #wrap
     position absolute
-    top 0
+    top 2px
     left 0
     right 0
     bottom 0
@@ -37,11 +37,15 @@
       -moz-animation: 0.5s empty
       -o-animation: 0.5s empty
       animation: 0.5s empty
+      z-index 1000
       .animated-view
+        height 100%
+        box-shadow 0 0 15px -5px #999
         -webkit-animation: 0.5s slideInLeft
         -moz-animation: 0.5s slideInLeft
         -o-animation: 0.5s slideInLeft
         animation: 0.5s slideInLeft
+        background #fff
 
 
 @media $screen-tablet-media-q
