--- a/app/styles/layout.styl
+++ b/app/styles/layout.styl
@@ -49,6 +49,10 @@
 
 
 @media $screen-tablet-media-q
+  a
+    &:hover, &:active
+      text-decoration none
+
   .header
     .navbar
       height $navbar-height + 2
