--- a/app/styles/schedules.styl
+++ b/app/styles/schedules.styl
@@ -95,3 +95,81 @@
     color: #000000
     &.current
       color: #FF6600
+
+#wrap
+  .lesson-info
+    background: #ebebeb
+    height: 215px
+    width: 100%
+    .lesson-info-icons
+      padding: 16px 0 0 58px
+      float: left
+      width: auto
+      height: 100%
+      a
+        margin: 0 0 10px 0
+    .lesson-info-data
+      float: left
+      padding: 12px 0 0 30px
+      .lesson-name
+        font-size: 17pt
+        color: #444444
+      .lesson-lecturer
+        color: #207E62
+        cursor: pointer
+      .lesson-start-time
+        font-size: 14pt
+        color: #444444
+    .lesson-info-files
+      float: left
+      display: inline-block
+      padding: 12px 0 0 30px
+      width: 90% /*Temp*/
+      .lesson-info-files-header
+        width: 100%
+        h4
+          display: inline-block
+          margin: 0 10px 0 0
+        input
+          width: 250px
+          height: 30px
+      .lesson-info-file-search
+        width: 100%
+        height: 40px
+        padding: 10px 0 0 0
+        select
+          float: left
+          width: 130px
+          height: 30px
+        input
+          float: left
+          width: 470px
+          height: 30px
+      .lesson-info-file-block
+        width: 360px
+        height: 55px
+        border: 2px #929292 solid
+        border-radius: 5px
+        background-color: #FFFFFF
+        margin: 10px 10px 0 0
+        float: left
+        .btn-edit
+          float: right
+          margin: 2px
+        .file-name
+          float: left
+          padding: 0 10px 0 10px
+          margin-top: 5px
+          border-right: 1px solid #606060
+          color: #207E62
+          cursor: pointer
+        .file-size
+          float: left
+          padding: 5px 0 0 10px
+          color: #606060
+        .file-comment
+          float: left
+          padding: 3px 0 0 10px
+          color: #7A7A7A
+        &:hover
+          background-color: #F7F6F6
