--- a/app/styles/schedules.styl
+++ b/app/styles/schedules.styl
@@ -26,72 +26,51 @@
   > .title
   .lesson-cell
     border: 1px solid #f0f0f0
-    border-top: none
     overflow: hidden
-    padding: 0 25px 25px
     min-height: 50px
-    min-width: 250px
     &:active, &:hover, &.active
       cursor: pointer
     &.current
       border: 1px solid #FF6600
-  .lesson-cell-l
-    margin-left: -15%
-  .lesson-cell-l-t
+  .lesson-cell-top
     border-radius: 10px 10px 0 0
-    border-top: 1px solid #f0f0f0
-  .lesson-cell-l-b
+  .lesson-cell-bottom
     border-radius: 0 0 10px 10px
-    margin-bottom: 20px
-  .lesson-cell-c
-    margin-left: 42%
-  .lesson-cell-c-t
-    border-radius: 10px 10px 0 0
-    border-top: 1px solid #f0f0f0
-  .lesson-cell-c-b
-    border-radius: 0 0 10px 10px
-    margin-bottom: 20px
-  .lesson-cell-r
-    margin-left: 100%
-  .lesson-cell-r-t
-    border-radius: 10px 10px 0 0
-    border-top: 1px solid #f0f0f0
-  .lesson-cell-r-b
-    border-radius: 0 0 10px 10px
-    margin-bottom: 20px
   .lesson-cell-title
     border: none
-    max-height: 50px
-    max-width: 50px
-  .lesson-title
+    margin-top: 10%
+    &:active, &:hover, &.active
+      cursor: default
+  .lesson-cell-title-day
     text-align: center
-    padding-top: 5px
-    padding-bottom: 5px
-    margin-left: 35px
-    margin-right: 35px
+    padding: 3px 0
+    margin: 10px 70px
     color: #000000
     &.current
       border-radius: 10px 10px 10px 10px
       background: #FF6600
       color: #FFFFFF
-  .lesson-title-date
+  .lesson-cell-title-date
     text-align: right
-    margin-top: -15%
-    margin-right: -5%
+    margin-top: -9%
+    margin-right: 10%
     color: #FFFFFF
     &.current
       color: #000000
   .lesson-time
+    float: left
+    max-height: 50px
     max-width: 20px
-    margin-left: -10%
-    margin-bottom: -10%
+    margin-left: -3%
   .lesson-time-number
-    padding-left: 15px
-    margin-bottom: -2%
+    text-align: center
+    margin-left: 60%
+    margin-bottom: -50%
     color: #000000
     &.current
       color: #FF6600
   .lesson-time-start
+    text-align: left
     color: #000000
     &.current
       color: #FF6600
