--- a/app/styles/layout.styl
+++ b/app/styles/layout.styl
@@ -13,13 +13,15 @@
 // Animate view changes on standalone mode
 // VERY DIRTY HACK
 .standalone
+  .animated-view
+    -webkit-transform: translateZ(0)
+
   #wrap
     position absolute
     top 2px
     left 0
     right 0
     bottom 0
-    -webkit-transform: translateZ(0)
 
     &.ng-leave
       -webkit-animation: 0.5s empty
