--- a/app/partials/schedules/studies.jade
+++ b/app/partials/schedules/studies.jade
@@ -18,5 +18,56 @@ div(ng-controller='SchedulesStudiesCtrl')
                             .lesson-cell
 
         // One column
-        div(ng-if="!matches", ng-init="days=['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat']")
-            div TODO: one column template there
+        div(ng-if="!matches")
+            .lesson-info
+                .lesson-info-icons
+                    a.btn(ng-click="viewType='info'", ng-class="{'btn-success':viewType=='info'}")
+                        i.fa.fa-info-circle
+                    br
+                    a.btn(ng-click="viewType='files'", ng-class="{'btn-success':viewType=='files'}")
+                        i.fa.fa-info-circle
+                div(ng-switch on="viewType")
+                  .lesson-info-data(ng-switch-when="info", ng-switch-default)
+                      span.lesson-name Математический анализ
+                      br
+                      a.lesson-lecturer Кошелев Антон Александрович
+                      br
+                      span.lesson-start-time начало в 10:40
+                  .lesson-info-files(ng-switch-when="files")
+                      .lesson-info-files-header
+                        h4 Приложения
+                        a.btn
+                            i.fa.fa-plus
+                        a.btn(ng-click="search = (search) ? false : true")
+                            i.fa.fa-search
+                        input(type="number", size="24")
+                      .lesson-info-file-search(ng-if="search")
+                        select#search-type
+                            option 1
+                            option 2
+                        select#search-date
+                            option 3
+                            option 4
+                        input(type="search")
+                      .clear-fix
+                      .lesson-info-file-block
+                          a.btn.btn-edit
+                              i.fa.fa-edit
+                          a.file-name Вопросы-к-экзамену1.pdf
+                          span.file-size 5Mb
+                          br
+                          span.file-comment Темы 1 семестра
+                      .lesson-info-file-block
+                          a.btn.btn-edit
+                              i.fa.fa-edit
+                          a.file-name Вопросы-к-экзамену2.pdf
+                          span.file-size 5Mb
+                          br
+                          span.file-comment Темы 1 семестра
+                      .lesson-info-file-block
+                          a.btn.btn-edit
+                              i.fa.fa-edit
+                          a.file-name Вопросы-к-экзамену3.pdf
+                          span.file-size 5Mb
+                          br
+                          span.file-comment Темы 1 семестра
