--- a/app/index.jade
+++ b/app/index.jade
@@ -20,7 +20,7 @@ html(ng-app="app")
       script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')
 
 
-    link(rel="stylesheet", href="css/app.css")
+    link(rel="stylesheet", href="/css/app.css")
     script.
       window.brunch = window.brunch || {};
       window.brunch['auto-reload'] = {
@@ -32,7 +32,7 @@ html(ng-app="app")
     include partials/footer
 
     //script(type='text/javascript', src="phonegap.js")
-    script(type='text/javascript', src='js/vendor.js')
-    script(type='text/javascript', src='js/partials.js')
-    script(type='text/javascript', src='js/app.js')
+    script(type='text/javascript', src='/js/vendor.js')
+    script(type='text/javascript', src='/js/partials.js')
+    script(type='text/javascript', src='/js/app.js')
 
