--- a/app/partials/schedules/studies.jade
+++ b/app/partials/schedules/studies.jade
@@ -1,76 +1,74 @@
 div(ng-controller='SchedulesStudiesCtrl')
-    .container#schedule-greed(breakpoint="min-width: 992px", ng-init="classes=['1','2','3','4','5','6']")
+    #schedule-greed(breakpoint="min-width: 768px", ng-init="classes=['1','2','3','4','5','6']")
         // Three columns
         div(ng-if="matches", ng-init="lines=[['Mon', 'Tue', 'Wed'], ['Thu', 'Fri', 'Sat']]")
-            div(ng-repeat="line in lines")
+            div(ng-repeat="line in lines", bindonce)
                 .row-fluid
                     .container
-                        .col-md-4(ng-repeat="dow in line", bindonce)
+                        .col-sm-4(ng-repeat="dow in line", bindonce)
                             .lesson-cell.lesson-cell-title
                                 h4.lesson-cell-title-day {{ 'schedules.studies.'+dow | translate }}
                                 h5.lesson-cell-title-date {{ '7 окт.' }}
                 .row-fluid(ng-repeat="class in classes")
-                    .lesson-time
-                        h4.lesson-time-number {{ class }}
-                        h5.lesson-time-start {{ '09:00' }}
                     .container
-                        .col-md-4(ng-repeat="dow in line", bindonce)
+                        .lesson-time
+                            h4.lesson-time-number {{ class }}
+                            h5.lesson-time-start {{ '09:00' }}
+                        .col-sm-4(ng-repeat="dow in line", bindonce)
                             .lesson-cell(ng-click="showDetails(dow, class)")
-                    .lessen-info(ng-if="$routeParams.classNum == class && in($routeParams.weekDay, line)")
-                        div 123123
-                        div 32423432
+                    .lesson-info(ng-if="$routeParams.classNum == class && in($routeParams.weekDay, line)")
+                        .container
+                            .lesson-info-icons
+                                a.btn(ng-click="viewType='info'", ng-class="{'btn-success':viewType=='info'}")
+                                    i.fa.fa-info-circle
+                                br
+                                a.btn(ng-click="viewType='files'", ng-class="{'btn-success':viewType=='files'}")
+                                    i.fa.fa-info-circle
+                            div(ng-switch on="viewType")
+                                .lesson-info-data(ng-switch-default)
+                                    span.lesson-name Математический анализ
+                                    br
+                                    a.lesson-lecturer Кошелев Антон Александрович
+                                    br
+                                    span.lesson-start-time начало в 10:40
+                                .lesson-info-files(ng-switch-when="files")
+                                    .lesson-info-files-header
+                                        h4 Приложения
+                                        a.btn
+                                            i.fa.fa-plus
+                                        a.btn(ng-click="search = (search) ? false : true")
+                                            i.fa.fa-search
+                                        input(type="number", size="24")
+                                    .lesson-info-file-search(ng-if="search")
+                                        select#search-type
+                                            option 1
+                                            option 2
+                                        select#search-date
+                                            option 3
+                                            option 4
+                                        input(type="search")
+                                    .clear-fix
+                                    .lesson-info-file-block
+                                        a.btn.btn-edit
+                                            i.fa.fa-edit
+                                        a.file-name Вопросы-к-экзамену1.pdf
+                                        span.file-size 5Mb
+                                        br
+                                        span.file-comment Темы 1 семестра
+                                    .lesson-info-file-block
+                                        a.btn.btn-edit
+                                            i.fa.fa-edit
+                                        a.file-name Вопросы-к-экзамену2.pdf
+                                        span.file-size 5Mb
+                                        br
+                                        span.file-comment Темы 1 семестра
+                                    .lesson-info-file-block
+                                        a.btn.btn-edit
+                                            i.fa.fa-edit
+                                        a.file-name Вопросы-к-экзамену3.pdf
+                                        span.file-size 5Mb
+                                        br
+                                        span.file-comment Темы 1 семестра
 
         // One column
-        div(ng-if="!matches")
-            .lesson-info
-                .lesson-info-icons
-                    a.btn(ng-click="viewType='info'", ng-class="{'btn-success':viewType=='info'}")
-                        i.fa.fa-info-circle
-                    br
-                    a.btn(ng-click="viewType='files'", ng-class="{'btn-success':viewType=='files'}")
-                        i.fa.fa-info-circle
-                div(ng-switch on="viewType")
-                  .lesson-info-data(ng-switch-default)
-                      span.lesson-name Математический анализ
-                      br
-                      a.lesson-lecturer Кошелев Антон Александрович
-                      br
-                      span.lesson-start-time начало в 10:40
-                  .lesson-info-files(ng-switch-when="files")
-                      .lesson-info-files-header
-                        h4 Приложения
-                        a.btn
-                            i.fa.fa-plus
-                        a.btn(ng-click="search = (search) ? false : true")
-                            i.fa.fa-search
-                        input(type="number", size="24")
-                      .lesson-info-file-search(ng-if="search")
-                        select#search-type
-                            option 1
-                            option 2
-                        select#search-date
-                            option 3
-                            option 4
-                        input(type="search")
-                      .clear-fix
-                      .lesson-info-file-block
-                          a.btn.btn-edit
-                              i.fa.fa-edit
-                          a.file-name Вопросы-к-экзамену1.pdf
-                          span.file-size 5Mb
-                          br
-                          span.file-comment Темы 1 семестра
-                      .lesson-info-file-block
-                          a.btn.btn-edit
-                              i.fa.fa-edit
-                          a.file-name Вопросы-к-экзамену2.pdf
-                          span.file-size 5Mb
-                          br
-                          span.file-comment Темы 1 семестра
-                      .lesson-info-file-block
-                          a.btn.btn-edit
-                              i.fa.fa-edit
-                          a.file-name Вопросы-к-экзамену3.pdf
-                          span.file-size 5Mb
-                          br
-                          span.file-comment Темы 1 семестра
+        div(ng-if="!matches") TODO: One column schedule
