changed animation, added overlay when animating

--- a/app/styles/_overrides.styl
+++ b/app/styles/_overrides.styl
@@ -26,6 +26,16 @@ body
   border-top 1px solid $panel-inner-border
   padding 10px 0
 
+.overlay
+  background-color rgb(255, 255, 255)
+  bottom 0
+  left 0
+  position fixed
+  right 0
+  top 0
+  opacity 0
+  z-index 1000000
+
 @media $screen-tablet-media-q
   .footer
     display none
@@ -35,11 +45,20 @@ body
     height auto !important
 
   .overthrow-enabled.standalone
-    .overthrow
-      overflow auto;
-      -webkit-overflow-scrolling touch;
+    .header
       position absolute
-      top $navbar-height
+      top 0
+      left 0
+      right 0
+      opacity 0.96
+      z-index 100000
+
+    .overthrow
+      overflow auto
+      -webkit-overflow-scrolling touch
+      position absolute
+      top 0
       left 0
       right 0
       bottom 0
+      padding-top $navbar-height
