--- a/app/styles/layout.styl
+++ b/app/styles/layout.styl
@@ -18,7 +18,7 @@
 
   #wrap
     position absolute
-    top 2px
+    top 0
     left 0
     right 0
     bottom 0
@@ -42,7 +42,6 @@
       z-index 1000
       .animated-view
         height 100%
-        box-shadow 0 0 15px -5px #999
         -webkit-animation: 0.5s slideInLeft
         -moz-animation: 0.5s slideInLeft
         -o-animation: 0.5s slideInLeft
