--- a/app/styles/_overrides.styl
+++ b/app/styles/_overrides.styl
@@ -61,4 +61,7 @@ body
       left 0
       right 0
       bottom 0
-      padding-top $navbar-height
+
+      .animated-view
+        padding-top $navbar-height
+        background #fff
