--- a/app/styles/schedules.styl
+++ b/app/styles/schedules.styl
@@ -78,7 +78,7 @@
 
 
 .lessen-transitions
-  transition(all 0.5s ease)
+  transition(all 0.8s cubic-bezier(0.23,1,0.32,1))
 
 .lesson-info
   overflow hidden
