--- a/app/styles/animation.styl
+++ b/app/styles/animation.styl
@@ -1,3 +1,7 @@
+.max-height-transition
+  transition(max-height 0.8s cubic-bezier(0.23,1,0.32,1))
+
+
 @keyframes empty {
   from {
     -webkit-transform translateX(0)
