--- a/app/styles/groups/index.styl
+++ b/app/styles/groups/index.styl
@@ -14,6 +14,7 @@
       display table-row
       .speciality
         display table-cell
+        /*float: left*/
         border: 5px solid #fff
         background: $panel-footer-bg
         h3
