--- a/app/styles/schedules.styl
+++ b/app/styles/schedules.styl
@@ -76,14 +76,14 @@
     &.current
       color: #FF6600
 
-
-.lesson-info
+.lesson-details-container
   overflow hidden
   background: #ebebeb
   width: 100%
   padding 0
   margin 0
 
+.lesson-details
   .lesson-info-icons
     margin 0 0 0 -37px
     padding 15px 0
