add groups localeStoreage

--- a/app/styles/_variables.styl
+++ b/app/styles/_variables.styl
@@ -621,7 +621,8 @@ $container-tablet ?=            ((720px + $grid-gutter-width));
 $container-desktop ?=           ((940px + $grid-gutter-width));
 
 // Large screen / wide desktop
-$container-lg-desktop ?=        ((1140px + $grid-gutter-width));
+// $container-lg-desktop ?=        ((1140px + $grid-gutter-width));*/
+$container-lg-desktop ?=        $container-desktop;
 
 
 // Stylus Extras
