--- a/app/partials/header.jade
+++ b/app/partials/header.jade
@@ -4,6 +4,14 @@ header.header.ng-cloak
             .navbar-header
                 a.navbar-brand(href="#")
                     span {{ 'layouts.main.site_name' | translate }}
+                div(ng-controller="AppCacheUpdateManagerCtrl")
+                    div(ng-switch on="appCacheStatus")
+                        div(ng-switch-when="2")
+                            span Проверка обновлений...
+                        div(ng-switch-when="3")
+                            span Загрузка новой версии...
+                        div(ng-switch-when="4")
+                            span Обновление готово
             div
                 form.navbar-form.navbar-right
                     .btn.btn-warning {{ 'buttons.sign_in' | translate }}
