add desctop header design

--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -1,4 +1,4 @@
-@import "_variables"
+@import _variables
 @import "/bower_components/font-awesome/css/font-awesome.css"
 
 // Bootstrap Core variables and mixins
@@ -51,5 +51,5 @@
 @import "/bower_components/bootstrap-stylus/stylus/responsive-utilities"
 
 // Your custom theme
-@import "_overrides"
-@import "animation"
+/*@import "_overrides"*/
+/*@import "animation"*/
