--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -5,6 +5,21 @@
   .navbar
     margin 0
 
+header
+  padding-top: 11px
+  .navbar-brand
+    padding-top: 10px
+    color: #4b5456
+  ul.nav
+    background: #f5f8fa
+    li
+      a
+        padding: 20px 32px
+        color: #4b5456
+      &:hover
+        a
+          color: #fff
+          background: #3baba1
 
 
 @media $screen-tablet-media-q
