--- a/app/styles/common/layout.styl
+++ b/app/styles/common/layout.styl
@@ -1,6 +1,11 @@
 @import "../_variables"
 @import "/bower_components/bootstrap-stylus/stylus/mixins"
 
+/*body*/
+/*font-family: arial*/
+/*font-size: 16px*/
+/*color: #4b5456*/
+
 // Disable navigation icons
 .nav
   i.fa
