--- a/app/styles/groups/index.styl
+++ b/app/styles/groups/index.styl
@@ -15,7 +15,7 @@
       .speciality
         display table-cell
         border: 5px solid #fff
-        background: $panel-footer-bg
+        background: #f5f8fa
         h3
           padding 15px 0 0 0
           margin 0
