--- a/app/partials/header.jade
+++ b/app/partials/header.jade
@@ -1,12 +1,12 @@
 header.header.ng-cloak
-    .navbar.navbar-default(role="navigation")
+    .navbar(role="navigation")
         .container
             .navbar-header
                 a.navbar-brand(href="#")
                     span {{ 'layouts.main.site_name' | translate }}
             div
-                form.navbar-form.navbar-right
-                    .btn.btn-warning {{ 'buttons.sign_in' | translate }}
+                //form.navbar-form.navbar-right
+                //.btn.btn-warning {{ 'buttons.sign_in' | translate }}
                 ul.nav.navbar-nav.navbar-right
                     li(ng-class='{active: $location.path() == "/" || $routeParams.groupName}')
                         a(href='/')
