--- a/app/partials/schedules/studies.jade
+++ b/app/partials/schedules/studies.jade
@@ -15,10 +15,27 @@ div(ng-controller='SchedulesStudiesCtrl')
                             h4.lesson-time-number {{ class }}
                             h5.lesson-time-start {{ '09:00' }}
                         .col-sm-4(ng-repeat="dow in line", bindonce)
-                            .lesson-cell(ng-click="showDetails(dow, class, line)")
+                            .lesson-cell.lesson-cell-top(ng-if="class == 1", ng-click="showDetails(dow, class)")
+                                .lesson-atom-cell(ng-repeat="atom in sched[dow][class]") {{atom.subject.name}}
+                            .lesson-cell(ng-if="(class != 1) && (class != 6)", ng-click="showDetails(dow, class)")
+                                .lesson-atom-cell(ng-repeat="atom in sched[dow][class]") {{atom.subject.name}}
+                            .lesson-cell.lesson-cell-bottom(ng-if="class == 6", ng-click="showDetails(dow, class)")
                                 .lesson-atom-cell(ng-repeat="atom in sched[dow][class]") {{atom.subject.name}}
                     .lesson-details-container.height-transition(ng-if="sched && $routeParams.classNum == class && in($routeParams.weekDay, line)")
                         div(ng-include, src="'app/partials/schedules/class/index.jade'")
-
         // One column
-        div(ng-if="!matches") TODO: One column schedule
+        div(ng-if="!matches", ng-init="lines=[['Mon'], ['Tue'], ['Wed'], ['Thu'], ['Fri'], ['Sat']]")
+            div(ng-repeat="line in lines", bindonce)
+                .row-fluid(ng-repeat="dow in line", bindonce)
+                    .lesson-cell.lesson-cell-title
+                        h4.lesson-cell-title-day {{ 'schedules.studies.'+dow | translate }}
+                        h5.lesson-cell-title-date {{ '7 окт.' }}
+                .row-fluid(ng-repeat="class in classes")
+                    .lesson-cell.lesson-cell-mobile(ng-if="class != 6")
+                        .lesson-time.lesson-time-mobile
+                            h4.lesson-time-number {{ class }}
+                            h5.lesson-time-start {{ '09:00' }}
+                    .lesson-cell.lesson-cell-mobile.lesson-cell-mobile-bottom(ng-if="class == 6")
+                        .lesson-time.lesson-time-mobile
+                            h4.lesson-time-number {{ class }}
+                            h5.lesson-time-start {{ '09:00' }}
