--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -7,6 +7,7 @@
 
 header
   padding-top: 11px
+  margin-bottom: 40px
   .navbar-brand
     padding-top: 10px
     color: #4b5456
@@ -14,7 +15,7 @@ header
     background: #f5f8fa
     li
       a
-        padding: 20px 32px
+        padding: 19px 32px 21px
         color: #4b5456
       &:hover
         a
