--- a/app/styles/groups/index.styl
+++ b/app/styles/groups/index.styl
@@ -14,18 +14,27 @@
       display table-row
       .speciality
         display table-cell
-        border: 5px solid #fff
+        border: 9px solid #fff
         background: #f5f8fa
         h3
-          padding 15px 0 0 0
+          padding 34px 0 0 0
           margin 0
         .course-content
           overflow: hidden
-          padding: 10px 15px 15px 15px
+          padding: 30px 15px 34px
           .line
             overflow: hidden
             .group
-              padding 5px
+              padding 2px
+              color: #839fa5
+              text-decoration none
+              &:hover
+                color: #f16520
+
+
+  .select-group-continer
+    margin-top 30px
+    margin-bottom: 30px
 
 @media $screen-tablet-media-q
   #schedule-index
