--- a/app/partials/schedules/exams.jade
+++ b/app/partials/schedules/exams.jade
@@ -1,2 +1,27 @@
-div(ng-controller='SchedulesExamsCtrl')
-
+div.tests-and-exams(ng-controller='SchedulesExamsCtrl')
+    span#test-title Зачётная неделя (с 22 дек. по 30 дек.)
+    .info
+        span.date 25 дек.
+        span.time 9:00
+        span.name АСВТ
+        span.teacher Сибиряков Александр Евгеньевич
+        span.audit 632
+    div.info
+        span.date 26 дек.
+        span.time 9:00
+        span.name Математический Анализ
+        span.teacher Кошелев Антон Александрович
+        span.audit 632
+    span#exam-title Экзамены (с 8 янв. по 30 янв.)
+    div.info
+        span.date 25 дек.
+        span.time 9:00
+        span.name АСВТ
+        span.teacher Сибиряков Александр Евгеньевич
+        span.audit 632
+    div.info
+        span.date 26 дек.
+        span.time 9:00
+        span.name Математический Анализ
+        span.teacher Кошелев Антон Александрович
+        span.audit 632
