--- a/app/styles/schedules/schedules.styl
+++ b/app/styles/schedules/schedules.styl
@@ -124,7 +124,7 @@
       h4
         display: inline-block
         margin: 0 10px 0 0
-      input
+      #search-teacher
         width: 250px
         height: 30px
     .lesson-info-file-search
@@ -133,14 +133,13 @@
       padding: 10px 0 0 0
       select
         float: left
-        width: 130px
+        width: 20%
         height: 30px
       input
         float: left
-        width: 470px
+        width: 60%
         height: 30px
     .lesson-info-file-block
-      width: 360px
       height: 55px
       border: 2px #929292 solid
       border-radius: 5px
