--- a/app/partials/schedules/studies.jade
+++ b/app/partials/schedules/studies.jade
@@ -16,11 +16,11 @@ div(ng-controller='SchedulesStudiesCtrl')
                             h5.lesson-time-start {{ '09:00' }}
                         .col-sm-4(ng-repeat="dow in line", bindonce)
                             .lesson-cell.lesson-cell-top(ng-if="class == 1", ng-click="showDetails(dow, class)")
-                                .lesson-atom-cell(ng-repeat="atom in sched[dow][class]") {{atom.subject.name}}
+                                .lesson-atom-cell(ng-repeat="atom in sched[dow][class]", class="lesson-parity lesson-parity-{{ atom.parity }} lesson-half-{{ atom.half_group }}") {{atom.subject.name}}
                             .lesson-cell(ng-if="(class != 1) && (class != 6)", ng-click="showDetails(dow, class)")
-                                .lesson-atom-cell(ng-repeat="atom in sched[dow][class]") {{atom.subject.name}}
+                                .lesson-atom-cell(ng-repeat="atom in sched[dow][class]", class="lesson-parity lesson-parity-{{ atom.parity }} lesson-half-{{ atom.half_group }}") {{atom.subject.name}}
                             .lesson-cell.lesson-cell-bottom(ng-if="class == 6", ng-click="showDetails(dow, class)")
-                                .lesson-atom-cell(ng-repeat="atom in sched[dow][class]") {{atom.subject.name}}
+                                .lesson-atom-cell(ng-repeat="atom in sched[dow][class]", class="lesson-parity lesson-parity-{{ atom.parity }} lesson-half-{{ atom.half_group }}") {{atom.subject.name}}
                     .lesson-details-container.height-transition(ng-if="sched && $routeParams.classNum == class && in($routeParams.weekDay, line)")
                         div(ng-include, src="'app/partials/schedules/class/index.jade'")
         // One column
