--- a/app/styles/common/footer.styl
+++ b/app/styles/common/footer.styl
@@ -1,3 +1,5 @@
+@import "../_variables"
+
 footer
   margin-top 80px
   background #4b5456
@@ -35,3 +37,7 @@ footer
   .navigation
     ul
       margin 0
+
+@media $screen-tablet-media-q
+  footer
+    margin 0
