--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -17,17 +17,22 @@ header
       a
         padding: 19px 32px 21px
         color: #4b5456
+      &.active
+        a, i.fa
+          color $theme-color
       &:hover
-        a
+        a, i.fa
           color: #fff
           background: #3baba1
 
 
 @media $screen-tablet-media-q
   .header
+    padding 0
+    margin 0
     .navbar
-      height $navbar-height + 2
-      margin 0
+      border none
+      height 79px
 
     .navbar-form
       display none
@@ -36,11 +41,12 @@ header
       float left
       margin-right 0.3em
       .navbar-brand
-        background-color $navbar-default-link-active-bg
-        span
-          display none
-        &:after
-          content "ST"
+        display none
+        /*background-color $navbar-default-link-active-bg*/
+        /*span*/
+        /*display none*/
+        /*&:after*/
+        /*content "ST"*/
 
     .navbar-right
       float left !important
@@ -48,25 +54,22 @@ header
     .nav
       margin 0
       position absolute
-      left 55px
+      left 110px
       right 0
       i.fa
         display block
         line-height 1.2em
-        font-size 2.4em
+        font-size 36px
       li
         text-align center
         float left
-        width 33.3333333%
+        width 33.333333%
         a
           margin 0
-          padding 0.7em 0.5em
-          background none !important
-          font-size 0.7em
+          padding 5px
+          font-family arial
+          font-size 16px
           line-height 1.3em
-
-        &.active
-          a
-            color $theme-color !important
-          i.fa
-            color $theme-color
+          span
+            margin 3px 0
+            display inline-block
