--- a/app/styles/groups/index.styl
+++ b/app/styles/groups/index.styl
@@ -17,23 +17,24 @@
         border: 9px solid #fff
         background: #f5f8fa
         h3
-          padding 34px 0 0 0
+          padding 28px 0 0 0
           margin 0
+          font-size 30px
         .course-content
           overflow: hidden
-          padding: 30px 15px 34px
+          padding: 28px 15px 34px
           .line
             overflow: hidden
             .group
-              padding 2px
+              padding 3px
               color: #839fa5
               text-decoration none
+              font-size 16px
               &:hover
                 color: #f16520
 
-
-  .select-group-continer
-    margin-top 30px
+  .select-group-container
+    margin-top 25px
     margin-bottom: 30px
 
 @media $screen-tablet-media-q
@@ -46,6 +47,20 @@
           border none
           display block
           width 100%
+          background #fff
+          h3
+            padding 26px 0 25px
+            font-size 36px
+            background #dce8ec
+          .course-content
+            padding 11px 0
+            .line
+              line-height 75px
+              .group
+                font-family arial
+                font-size 28px
+
+
 
     &.container
       max-width 100%
@@ -53,15 +68,6 @@
       width 100%
       &.col-md-10
         padding 0
-      .speciality
-        border none
-        h3
-          padding 15px !important
-          border-bottom 1px solid #ddd
-          margin 0
-          background #fff
-        .course-content
-          padding 0 !important
-          .group
-            font-size 25px
 
+    .select-group-container
+      margin-bottom 20px
