--- a/app/partials/schedules/studies.jade
+++ b/app/partials/schedules/studies.jade
@@ -2,30 +2,29 @@ div(ng-controller='SchedulesStudiesCtrl')
     #schedule-greed(breakpoint="min-width: 768px", ng-init="classes=['1','2','3','4','5','6']")
         // Three columns
         div(ng-if="matches", ng-init="lines=[['Mon', 'Tue', 'Wed'], ['Thu', 'Fri', 'Sat']]")
-            div(ng-repeat="line in lines", bindonce)
+            .lessons-desktop(ng-repeat="line in lines", bindonce)
                 .row-fluid
                     .container
                         .col-sm-4(ng-repeat="dow in line", bindonce)
-                            .lesson-cell.lesson-cell-title
+                            .lesson-cell-title
                                 h4.lesson-cell-title-day {{ 'schedules.studies.'+dow | translate }}
                                 h5.lesson-cell-title-date {{ '7 окт.' }}
-                .row-fluid(ng-repeat="class in classes")
+                .lessons-row.row-fluid(ng-repeat="class in classes")
                     .container
-                        .lesson-time
-                            h4.lesson-time-number {{ class }}
-                            h5.lesson-time-start {{ '09:00' }}
-                        .col-sm-4(ng-repeat="dow in line", bindonce)
-                            .lesson-cell.lesson-cell-top(ng-if="class == 1", ng-click="showDetails(dow, class)")
-                                .lesson-atom-cell(ng-repeat="atom in sched[dow][class]", class="lesson-parity lesson-parity-{{ atom.parity }} lesson-half-{{ atom.half_group }}") {{atom.subject.name}}
-                            .lesson-cell(ng-if="(class != 1) && (class != 6)", ng-click="showDetails(dow, class)")
-                                .lesson-atom-cell(ng-repeat="atom in sched[dow][class]", class="lesson-parity lesson-parity-{{ atom.parity }} lesson-half-{{ atom.half_group }}") {{atom.subject.name}}
-                            .lesson-cell.lesson-cell-bottom(ng-if="class == 6", ng-click="showDetails(dow, class)")
-                                .lesson-atom-cell(ng-repeat="atom in sched[dow][class]", class="lesson-parity lesson-parity-{{ atom.parity }} lesson-half-{{ atom.half_group }}") {{atom.subject.name}}
+                        .lesson-time-wrapper
+                            .lesson-time
+                                h4.lesson-time-number {{ class }}
+                                h5.lesson-time-start {{ timing[class].start | minutesToHours }}
+                        .lesson-cell-wrapper.col-sm-4(ng-repeat="dow in line", bindonce)
+                            .lesson-cell
+                                .lesson-atom-cell(ng-repeat="atom in sched[dow][class]",
+                                class="lesson-parity-{{ atom.parity }} lesson-half-{{ atom.half_group }}",
+                                ng-click="showDetails(dow, class, $index, line)") {{atom.subject.name}}
                     .lesson-details-container.height-transition(ng-if="sched && $routeParams.classNum == class && in($routeParams.weekDay, line)")
                         div(ng-include, src="'app/partials/schedules/class/index.jade'")
         // One column
         div(ng-if="!matches", ng-init="lines=[['Mon'], ['Tue'], ['Wed'], ['Thu'], ['Fri'], ['Sat']]")
-            div(ng-repeat="line in lines", bindonce)
+            .lessons-mobile(ng-repeat="line in lines", bindonce)
                 .row-fluid(ng-repeat="dow in line", bindonce)
                     .lesson-cell.lesson-cell-title
                         h4.lesson-cell-title-day {{ 'schedules.studies.'+dow | translate }}
